# loopxia-engine-examples

./: .gitmodules  CMakeLists.txt
examples/3d-third-person/: CMakeLists.txt  main.cpp
examples/3d-third-person/models/dragonball/5_male_saiyans/: ReadMe_Saiyans.txt
examples/3d-third-person/models/dragonball/5_male_saiyans/T-Pose/: Broly_Tpose.fbx  Gohan_Tpose.fbx
examples/3d-third-person/models/dragonball/5_male_saiyans/T-Pose/no_tails/: Broly_Tpose.fbx  Gohan_Tpose.fbx  Goku_Tpose.fbx  Raditz_Tpose.fbx  Vegeta_Tpose.fbx
examples/3d-third-person/models/dragonball/5_male_saiyans/idle_animation/: Broly_idleAnim.fbx  Gohan_idleAnim.fbx  idle_scenario.mb
examples/3d-third-person/models/dragonball/5_male_saiyans/idle_animation/.mayaSwatches/: idle_scenario.mb.swatches
examples/3d-third-person/models/dragonball/GINE & BABY GOKU_model/fbx/: Baby_Goku.fbx
